k8s/ingress/notification-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  namespace: circle
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: notification-ip
    # cert-manager.io/issuer: letsencrypt-staging
    cert-manager.io/issuer: letsencrypt-production
spec:
  tls:
    - secretName: web-ssl
      hosts:
        - circle-notification.planetunknown.xyz
  rules:
  - host: circle-notification.planetunknown.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway-svc
            port:
              number: 5001

  # defaultBackend:
  #   service:
  #     name: notification-svc
  #     port:
  #       number: 8086
